// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Renders icon by name 1`] = `
<div>
  <svg>
    <path
      d="M9.067 4v10.133m5.066-5.066H4"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 2`] = `
<div>
  <svg>
    <path
      d="M1.2 3.6l2.022 2.032L7.275 1.2"
      fill="none"
      fill-rule="evenodd"
      stroke="currentColor"
      stroke-width="1.2"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 3`] = `
<div>
  <svg>
    <path
      d="M10.59.59L6 5.17 1.41.59 0 2l6 6 6-6z"
      fill="currentColor"
      fill-rule="nonzero"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 4`] = `
<div>
  <svg>
    <path
      d="M1.333 1.333l9.428 9.428M10.667 1.333l-9.334 9.334"
      fill="none"
      fill-rule="evenodd"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`Icon Renders icon by name 5`] = `
<div>
  <svg>
    <path
      d="M10 9h2v8h-2zM10 5h2v2h-2z"
      fill="currentColor"
    />
  </svg>
</div>
`;
